--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,4 +1,4 @@
-name: generate animation
+name: Generate Snake Animation
 
 on:
   schedule:
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:
   push:
     branches:
-      - master  
+      - main  # or "master" if your branch is named that
 
 jobs:
   generate:
@@ -14,19 +14,19 @@ jobs:
     timeout-minutes: 10
 
     steps:
-      - name: Checkout repository
+      - name: Checkout Repository
         uses: actions/checkout@v3
 
-      - name: Generate github-contribution-grid-snake.svg
-        uses: Platane/snk/svg-only@v2
+      - name: Generate GitHub Contribution Snake
+        uses: Platane/snk/svg-only@v3  # v3 works better and fixes palette issue
         with:
           github_user_name: rachitsharma300
           outputs: |
             dist/github-contribution-grid-snake.svg
             dist/github-contribution-grid-snake-dark.svg
 
-      - name: Push github-contribution-grid-snake.svg to the output branch
-        uses: crazy-max/ghaction-github-pages@v2.6.0
+      - name: Push Snake to Output Branch
+        uses: crazy-max/ghaction-github-pages@v3
         with:
           target_branch: output
           build_dir: dist
