--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:
   push:
     branches:
-      - main  # change to 'master' if your default branch is named 'master'
+      - main  # or 'master' if that's your default branch
 
 jobs:
   generate:
@@ -17,15 +17,15 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v3
 
-      - name: Generate Dark Snake
-        uses: Platane/snk/svg-only@v3
+      - name: Generate Dark Snake SVG
+        uses: Platane/snk@v3
         with:
           github_user_name: rachitsharma300
-          outputs: dist/github-contribution-grid-snake-dark.svg
-          palette: github-dark
+          outputs: |
+            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
 
-      - name: Push snake SVG to output branch
-        uses: crazy-max/ghaction-github-pages@v3
+      - name: Push to output branch
+        uses: crazy-max/ghaction-github-pages@v4
         with:
           target_branch: output
           build_dir: dist
