--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -22,7 +22,8 @@ jobs:
         with:
           github_user_name: rachitsharma300
           outputs: |
-                 dist/github-contribution-grid-snake-dark.svg?palette=github-dark&color_snake=#f9826c&color_dots=#0d1117,#fc5185,#f9826c,#f9d423,#ffffff
+                 dist/github-contribution-grid-snake-dark.svg?palette=github-dark&color_snake=#f9826c&color_dots=#fc5185,#f9826c,#f9d423,#ffffff,transparent
+
 
 
 
