--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -22,7 +22,8 @@ jobs:
         with:
           github_user_name: rachitsharma300
           outputs: |
-                  dist/github-contribution-grid-snake-dark.svg?palette=github-dark&color_snake=#ff6ec7&color_dots=#ffb86c,#ff6ec7,#fab387,#f8f8f2,#2a2a2a
+                  dist/github-contribution-grid-snake.svg?palette=default&color_snake=#ff6ec7&color_dots=#ffb86c,#ff6ec7,#fab387,#2a2a2a,#ffffff
+
 
 
 
