--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -22,7 +22,7 @@ jobs:
         with:
           github_user_name: rachitsharma300
           outputs: |
-                  dist/github-contribution-grid-snake.svg?palette=default&color_snake=#ff6ec7&color_dots=#ffb86c,#ff6ec7,#fab387,#2a2a2a,#ffffff
+                  dist/github-contribution-grid-snake-dark.svg?palette=github-dark&color_snake=#fe3b7f&color_dots=#ffd300,#fe3b7f,#00d4ff,#ff9e00,#1e1e1e
 
 
 
