--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -1,10 +1,8 @@
-name: GitHub Metrics
+name: Metrics
 
 on:
-  schedule:
-    - cron: "0 0 * * *"
+  schedule: [{cron: "0 0 * * *"}]
   push:
-    branches: ["main"]
   workflow_dispatch:
 
 jobs:
@@ -13,9 +11,8 @@ jobs:
     steps:
       - uses: lowlighter/metrics@latest
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          base: header, activity, community, repositories, metadata, contribs, prs, issues
-          plugin_lines: yes
-          plugin_languages: yes
+          token: ${{ secrets.METRICS_TOKEN }}
+          user: rachitsharma300
+          base: header, activity, community, repositories, metadata
           theme: radical
-          colors: '{ "header_bg": "#0d1117", "accent": "#f9826c", "text": "#c9d1d9" }'
+          plugin_lines: yes
