--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -1,17 +1,19 @@
 name: Metrics
-
 on:
+  # Schedule daily updates
   schedule: [{cron: "0 0 * * *"}]
-  push:
+  # (optional) Run workflow manually
   workflow_dispatch:
-
+  # (optional) Run workflow when pushing on master/main
+  push: {branches: ["master", "main"]}
 jobs:
   github-metrics:
     runs-on: ubuntu-latest
+    environment: 
+      name: production
+    permissions:
+      contents: write
     steps:
       - uses: lowlighter/metrics@latest
         with:
           token: ${{ secrets.METRICS_TOKEN }}
-          user: rachitsharma300
-          base: header, activity, community, repositories, metadata
-          theme: radical
